--- a/capstone_2_preprocessing.ipynb
+++ b/capstone_2_preprocessing.ipynb
@@ -1165,6 +1165,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e040cd92-177e-4ab0-9038-3595bdba9fc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('capstone_2_modeling.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "38b57b4d-e137-46f1-9da9-095d158157b1",
    "metadata": {},
@@ -1178,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "7fd1d1f7-c3ee-4c5a-9d1a-22b63b3cf38a",
    "metadata": {},
    "outputs": [],
@@ -1201,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "id": "63b55c86-0c42-468b-91db-38cdb655fd36",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "c5dfdacb-a29d-48de-8f69-ef1426cc6c2f",
    "metadata": {},
    "outputs": [],
